[package]
name = "pls"
description = "Parser and writer for the PLS playlist format"
documentation = "https://rawcdn.githack.com/nabijaczleweli/pls-rs/doc/pls/index.html"
repository = "https://github.com/nabijaczleweli/pls-rs"
readme = "README.md"
keywords = ["music", "playlist", "pls", "parse"]
categories = ["parser-implementations"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.2.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]


[dependencies]
rust-ini = "0.10"
